Improve build system